--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
       material="color: orange">
     </a-obj-model>
 
+    <a-box color= "red" width="1" height="1" depth="1" position="0 1210 -3000"></a-box>
+
   </a-scene>
 
 
