--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       material="color: orange">
     </a-obj-model>
 
-    <a-box color= "red" width="1" height="1" depth="1" position="0 1210 -3000"></a-box>
+    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
 
   </a-scene>
 
