--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       position="0 1200 -3000"
       rotation="-210 -120 180"
       scale="8 8 8"
-      material="color: orange">
+      material="color: red">
     </a-obj-model>
 
     <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
