--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,24 @@
 
     <a-assets>
       <a-asset-item id="ducky-obj" src="ducky.obj"></a-asset-item>
+      <a-asset-item id="pokeball" src="pokeball-vray.obj"></a-asset-item>
+      <a-asset-item id="pokeball-material" src="pokeball-vray.mtl"></a-asset-item>
     </a-assets>
+
+    <a-obj-model
+      src="#ducky-obj"
+      position="0 1200 -3000"
+      rotation="-210 -120 180"
+      scale="8 8 8"
+      material="color: orange">
+    </a-obj-model>
+
+    <a-obj-model
+      src="#pokeball"
+      mtl="#pokeball-material"
+      position="0 1300 -3000">
+    </a-obj-model>
+
   </a-scene>
 
 
