--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 <body>
   <a-scene>
 
-    <a-camera position="0 1.8 500"></a-camera>
+    <a-camera position="0 1.8 500"> <a-cursor color="blue" /></a-camera>
 
     <a-assets>
       <a-asset-item id="ducky-obj" src="ducky.obj"></a-asset-item>
@@ -59,8 +59,8 @@
       position="1000 1200 -3000">
     </a-obj-model>
   
-    <a-box color="red" width="100" height="100" depth="100"
-              position="-1000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
+    <a-box color="red" width="1000" height="1000" depth="1000"
+              position="-10000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
               <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-box>
 
@@ -83,6 +83,12 @@
         console.log('videoooo')
       }
     });
+    
+    var box = document.querySelector('a-box')
+        box.addEventListener("mouseenter", function()
+        {
+          box.setAttribute("scale", {x:0.5, y:2, z:5.9})
+        })
     
   </script>
 
