--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,14 @@
       rotation="-210 -120 180"
       scale="8 8 8"
       material="color: orange">
+      <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-obj-model>
 
     <a-obj-model
       src="#pokeball"
       mtl="#pokeball-material"
       position="1000 1200 -3000">
+      <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-obj-model>
   
     <a-box color="red" width="1000" height="1000" depth="1000"
