--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,9 @@
 
   <div class="coords">
   </div>
+  <script>
+    var socket = io()
+  </script>
 
   <script type="text/javascript">
 
@@ -86,6 +89,7 @@
     });
     
   </script>
+
 </body>
 </html>
 
