--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,8 @@
 
   <div class="coords">
   </div>
-  <script>
-    var socket = io()
-  </script>
+  
+  <script src="/socket.io/socket.io.js"></script>
 
   <script type="text/javascript">
 
