--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,10 @@
 
   <div class="coords">
   </div>
-  <script> var socket = io()</script>
+  <script> 
+    var socket = io()
+    socket.on('message', function(data){console.log(data)})
+  </script>
 
   <script type="text/javascript">
 
