--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,8 @@
               position="-10000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
               <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-box>
+
+    <a-sphere color= "blue" radius="1000" position="-1000 1500 3000"></a-sphere>
   </a-scene>
 
 
