--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 
   <div class="coords">
   </div>
-  <script> 
+  <script type="text/javascript"> 
     var socket = io()
     socket.on('testerEvent', function(data){document.write(data.description)})
   </script>
