--- a/public/index.html
+++ b/public/index.html
@@ -79,11 +79,7 @@
   <script type="text/javascript"> 
     var socket = io()
     socket.on('testerEvent', function(data){ 
-      let newDiv = document.createElement("div")
-      let newContent = data.description
-      newDiv.appendChild(newContent)
-      var stuff = document.getElementsByTagName('a-sphere')
-      document.body.insertBefore(newDiv, stuff)
+      document.body.appendChild(`<div>${data.description}</div>`)
     })
   </script>
 
