--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <script src="aframe.js"></script>
   <script src="camera.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="https://rawgit.com/ngokevin/aframe-broadcast-component/master/dist/aframe-broadcast-component.min.js"></script>
+  <script src="/aframe-broadcast-component/master/dist/aframe-broadcast-component.min.js"></script>
   <style>   
     html, body, div, a-scene {
       background-color: transparent;
