--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,8 @@
   <script type="text/javascript"> 
     var socket = io()
     socket.on('message', function(data){
-      var scene = document.querySelector('a-scene');
-      var cylinder = document.createElement('a-cylinder');
-      cylinder.setAttribute('color', '#FF9500');
-      cylinder.setAttribute('height', '1000');
-      cylinder.setAttribute('radius', '1000');
-      cylinder.setAttribute('position', '-1000 1500 3000');
-      scene.appendChild(cylinder);
+      var el = document.createElement('a-entity');
+      document.querySelector('a-scene').appendChild(el);    
     });
   </script>
 
