--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,12 @@
     var socket = io()
     socket.on('message', function(data){
       var el = document.createElement('a-entity');
+      el.setAttribute("geometry", "primitive: box")
+      el.setAttribute("width", "1000")
+      el.setAttribute("height", "1000")
+      el.setAttribute("depth", "1000") 
+      el.setAttribute("position", "10000 1200 -3000")
+      el.setAttribute("color", "orange")
       document.querySelector('a-scene').appendChild(el);    
     });
   </script>
