--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
   <script src="aframe.js"></script>
   <script src="camera.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
-<script>THREEx.ArToolkitContext.baseURL = 'https://rawgit.com/jeromeetienne/ar.js/master/three.js/'</script>
   <style>   
     html, body, div, a-scene {
       background-color: transparent;
@@ -37,7 +35,7 @@
     }
   </style>   
 </head>
-<body style='margin : 0px; overflow: hidden;'>
+<body>
   <a-scene>
 
     <a-camera position="0 1.8 500"> <a-cursor color="blue" /></a-camera>
@@ -68,9 +66,6 @@
               position="-10000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
               <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-box>
-    
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-        <a-marker-camera preset='hiro'></a-marker-camera>
 
     <a-entity geometry="primitive: box" width="1000" height="1000" depth="1000" position="10000 1200 -3000" color="orange"></a-entity>
   </a-scene>
