--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,8 @@
               <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-box>
 
-    <a-entity geometry="primitive: box" width="1000" height="1000" depth="1000" position="10000 1200 -3000" color="orange"></a-entity>
+    <a-entity id="yellowSphere" geometry="primitive: sphere" material="color:#ff0; metalness:0.0; roughness:1.0" position="-10000 1200 -3000" rotation="" scale="" visible=""></a-entity>
+    </a-entity>
   </a-scene>
 
 
@@ -81,6 +82,12 @@
     var socket = io()
     socket.on('message', function(data){
       var el = document.createElement('a-entity');
+      el.setAttribute("geometry", "primitive: box")
+      el.setAttribute("width", "1000")
+      el.setAttribute("height", "1000")
+      el.setAttribute("depth", "1000") 
+      el.setAttribute("position", "10000 1200 -3000")
+      el.setAttribute("color", "orange")
       document.querySelector('a-scene').appendChild(el);    
     });
   </script>
