--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
               <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-box>
 
-    <a-entity id="yellowSphere" geometry="primitive: sphere, radius: 10000" material="color:#ff0; metalness:0.0; roughness:1.0" position="-10000 1200 -3000" rotation="" scale="" visible=""></a-entity>
+    <a-entity id="yellowSphere" geometry="primitive: sphere radius: 10000" material="color:#ff0; metalness:0.0; roughness:1.0" position="-10000 1200 -3000" rotation="" scale="" visible=""></a-entity>
     </a-entity>
   </a-scene>
 
