--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,6 @@
               position="-10000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
               <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-box>
-
-    <a-entity id="yellowSphere" geometry="primitive: sphere; radius: 1000;" material="color:#ff0; metalness:0.0; roughness:1.0;" position="-10000 1200 -3000"></a-entity>
     </a-entity>
   </a-scene>
 
@@ -82,12 +80,9 @@
     var socket = io()
     socket.on('message', function(data){
       var el = document.createElement('a-entity');
-      el.setAttribute("geometry", "primitive: box")
-      el.setAttribute("width", "1000")
-      el.setAttribute("height", "1000")
-      el.setAttribute("depth", "1000") 
-      el.setAttribute("position", "10000 1200 -3000")
-      el.setAttribute("color", "orange")
+      el.setAttribute("geometry", "primitive: sphere; radius: 1000;")
+      el.setAttribute("position", "-10000 1200 -3000")
+      el.setAttribute("material", "color:#ff0; metalness:0.0; roughness:1.0;")
       document.querySelector('a-scene').appendChild(el);    
     });
   </script>
