--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="Hello, World! • A-Frame">
   <script src="aframe.js"></script>
   <script src="camera.js"></script>
+  <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>c
   <script src="/socket.io/socket.io.js"></script>
   <style>   
     html, body, div, a-scene {
@@ -35,8 +37,8 @@
     }
   </style>   
 </head>
-<body>
-  <a-scene>
+<body style='margin : 0px; overflow: hidden;'>
+  <a-scene embedded artoolkit='sourceType: webcam;'>
 
     <a-camera position="0 1.8 500"> <a-cursor color="blue" /></a-camera>
 
@@ -61,12 +63,9 @@
       position="1000 1200 -3000">
       <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
     </a-obj-model>
-  
-    <a-box color="red" width="1000" height="1000" depth="1000"
-              position="-10000 1200 -3000" rotation="45 45 45" scale="1 2.5 1">
-              <a-animation attribute="rotation" begin="click" repeat="indefinite" to="0 360 0"></a-animation>
-    </a-box>
-    </a-entity>
+
+    <a-box position='10000 1200 -3000' material='opacity: 0.5;' width="1000" height="1000" depth="1000"></a-box>
+    <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 
 
