--- a/public/index.html
+++ b/public/index.html
@@ -5,38 +5,11 @@
   <title>Hello, World! • A-Frame</title>
   <meta name="description" content="Hello, World! • A-Frame">
   <script src="aframe.js"></script>
-  <script src="camera.js"></script>
-  <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>c
-  <script src="/socket.io/socket.io.js"></script>
-  <style>   
-    html, body, div, a-scene {
-      background-color: transparent;
-    }
-    video, img {
-      width: 100%    !important;
-      max-width: 100%    !important;
-      height: auto   !important;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1000;
-    }
-    .coords {
-      position: absolute;
-      top: 0.1rem;
-      left: 0.1rem;
-      background-color: silver;
-      opacity: 0.5;
-      color: #fff;
-    }
-    .glow {
-      background: #527fa9;
-      box-shadow: inset 0 0 30px 15px #49628a;
-      transition: 500ms ease-in-out;
-    }
-  </style>   
+  <script src="/socket.io/socket.io.js"></script> 
 </head>
+<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded artoolkit='sourceType: webcam;'>
     <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
