--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,8 @@
 <body>
   <a-scene embedded artoolkit='sourceType: webcam;'>
 
-    <a-camera position="0 1.8 500"> <a-cursor color="blue" /></a-camera>
+    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <a-marker-camera preset='hiro'></a-marker-camera>
 
   </a-scene>
 
