--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,12 @@
 <body>
   <a-scene embedded artoolkit='sourceType: webcam;'>
 
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-    <a-marker-camera preset='hiro'></a-marker-camera>
-
+  
+    <a-box color="red" width="10" height="10" depth="10"
+              position="0 0.5 0" rotation="45 45 45" scale="1 2.5 1">
+    </a-box>
+     <a-marker-camera preset='hiro'></a-marker-camera>
+    </a-entity>
   </a-scene>
 
 
@@ -53,6 +56,29 @@
   <div class="coords">
   </div>
 
+<!--   <script type="text/javascript"> 
+    var socket = io()
+    socket.on('message', function(data){
+      var el = document.createElement('a-entity');
+      el.setAttribute("geometry", "primitive: sphere; radius: 1000;")
+      el.setAttribute("position", "-10000 1200 -3000")
+      el.setAttribute("material", "color:#ff0; metalness:0.0; roughness:1.0;")
+      document.querySelector('a-scene').appendChild(el);    
+    });
+  </script> -->
+
+<!--   <script type="text/javascript">
+
+    var vid = document.querySelector('#inputVideo');
+
+    cameraSource.start({
+      videoElement: vid,
+      callback: function() {
+        console.log('videoooo')
+      }
+    });
+    
+  </script> -->
 
 </body>
 </html>
