--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
   <a-scene embedded artoolkit='sourceType: webcam;'>
 
   
-    <a-box color="red" width="10" height="10" depth="10"
-              position="0 0.5 0" rotation="45 45 45" scale="1 2.5 1">
+    <a-box color="red" material='opacity: 0.5;'
+              position="0 0.5 0">
     </a-box>
      <a-marker-camera preset='hiro'></a-marker-camera>
     </a-entity>
