--- a/public/index.html
+++ b/public/index.html
@@ -55,18 +55,18 @@
   <div class="coords">
   </div>
 
-<!--   <script type="text/javascript"> 
+  <script type="text/javascript"> 
     var socket = io()
     socket.on('message', function(data){
       var el = document.createElement('a-entity');
-      el.setAttribute("geometry", "primitive: sphere; radius: 1000;")
-      el.setAttribute("position", "-10000 1200 -3000")
+      el.setAttribute("geometry", "primitive: sphere; radius: 1;")
+      el.setAttribute("position", "0 0.5 0")
       el.setAttribute("material", "color:#ff0; metalness:0.0; roughness:1.0;")
       document.querySelector('a-scene').appendChild(el);    
     });
-  </script> -->
+  </script>
 
-<!--   <script type="text/javascript">
+  <script type="text/javascript">
 
     var vid = document.querySelector('#inputVideo');
 
@@ -77,7 +77,7 @@
       }
     });
     
-  </script> -->
+  </script>
 
 </body>
 </html>
