--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <script src="camera.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="aframe-ar.js"></script>
   <style>   
     html, body, div, a-scene {
       background-color: transparent;
