--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Hello, World! • A-Frame">
   <script src="camera.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="aframe.js"></script>
+  <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   <script src="aframe-ar.js"></script>
   <style>   
     html, body, div, a-scene {
