--- a/public/aframeAR.html
+++ b/public/aframeAR.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>c</title>
+	<title>Hello, World! A-Frame</title>
 </head>
 <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded artoolkit='sourceType: webcam;'>
 		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
+	<script>
+		var socket = io()
+	</script>
 </body>
 </html>
 
