--- a/public/aframeAR.html
+++ b/public/aframeAR.html
@@ -13,6 +13,7 @@
 	</a-scene>
 	<script>
 		var socket = io()
+		socket.on('message', function(data) {console.log(data.description)})
 	</script>
 </body>
 </html>
