--- a/public/vr.html
+++ b/public/vr.html
@@ -6,7 +6,11 @@
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 <body>
 	<a-scene>
-		<a-box position="1 1 1" width="1" height="1" depth="1"></a-box>
+		<a-box position="1 1 1" width="1" height="1" depth="1" color="blue"></a-box>
 	</a-scene>
+	<script>
+		var socket = io()
+		socket.on('message', function(data) {console.log(data)})
+	</script>
 </body>
 </html>
