--- a/public/vr.html
+++ b/public/vr.html
@@ -4,6 +4,7 @@
 	<title>Hello, World! A-Frame VR World!</title>
 </head>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 <body>
 	<a-scene>
 		<a-box position="1 1 1" width="1" height="1" depth="1" color="blue"></a-box>
