--- a/public/index.html
+++ b/public/index.html
@@ -70,9 +70,10 @@
     var socket = io()
     socket.on('message', function(data){
       var el = document.createElement('a-entity');
-      el.setAttribute("geometry", "primitive: sphere; radius: 1000;")
-      el.setAttribute("position", "-10000 1200 -3000")
-      el.setAttribute("material", "color:#ff0; metalness:0.0; roughness:1.0;")
+      el.setAttribute("geometry", data.geometry)
+      el.setAttribute("position", data.position)
+      el.setAttribute("material", data.material)
+      console.log(data.message)
       document.querySelector('a-scene').appendChild(el);    
     });
   </script>
