--- a/public/switch.html
+++ b/public/switch.html
@@ -4,7 +4,15 @@
 	<title>Welcome to My App</title>
 </head>
 <body>
-	<button type="button">Creator VR</button>
-	<button type="button">Mixed Reality</button>
+	<button id ="VR" type="button">Creator VR</button>
+	<button id ="Mixed-Reality" type="button">Mixed Reality</button>
+	<script type="text/javascript">
+		document.getElementById("VR").onClick = function() {
+			location.href = "https://stackproject.herokuapp.com/vr"	
+
+		document.getElementById("Mixed-Reality").onClick = function() {
+			location.href = "https://stackproject.herokuapp.com/ar"	
+		}
+	</script>
 </body>
 </html>
