--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
 <body>
 	<button id ="VR" type="button">Creator VR</button>
 	<button id ="Mixed-Reality" type="button">Mixed Reality</button>
-<!-- 	<script type="text/javascript">
+	<script type="text/javascript">
 		document.getElementById("VR").onClick = function() {
 			location.href = "https://stackproject.herokuapp.com/vr"	
 
 		document.getElementById("Mixed-Reality").onClick = function() {
 			location.href = "https://stackproject.herokuapp.com/ar"	
 		}
-	</script> -->
+	</script>
 </body>
 </html>
