--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,7 @@
 	<title>Welcome to My App</title>
 </head>
 <body>
-	<button id ="VR" type="button">Creator VR</button>
-	<button id ="Mixed-Reality" type="button">Mixed Reality</button>
-	<script type="text/javascript">
-		document.getElementById("VR").onClick = function() {
-			location.href = "https://stackproject.herokuapp.com/vr"	
-		}
-		document.getElementById("Mixed-Reality").onClick = function() {
-			location.href = "https://stackproject.herokuapp.com/ar"	
-		}
-	</script>
+	<button id ="VR" onclick="location.href = 'https://stackproject.herokuapp.com/vr'" type="button">Creator VR</button>
+	<button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar'" type="button">Mixed Reality</button>
 </body>
 </html>
