--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<button id ="VR" onclick="location.href = 'https://stackproject.herokuapp.com/vr'" type="button">Creator VR</button>
-	<button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar'" type="button">Mixed Reality</button>
+	<button id ="Mixed-Reality" onclick="location.href = 'https://stackproject.herokuapp.com/ar1'" type="button">Mixed Reality</button>
 </body>
 </html>
