--- a/public/vr.html
+++ b/public/vr.html
@@ -9,6 +9,7 @@
 	<a-scene>
 		<a-box position="1 1 1" width="1" height="1" depth="1" color="blue"></a-box>
 	</a-scene>
+	<button>Howdy</button>
 	<script>
 		var socket = io()
 		socket.on('message', function(data) {console.log(data)})
