--- a/public/vr.html
+++ b/public/vr.html
@@ -6,9 +6,13 @@
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<style type="text/css">
+		.aframebox {
+			height: 500px;
+			width: 500px;
+			}
 	</style>
 <body>
-	<a-scene embedded>
+	<a-scene class="aframebox" embedded>
 		<a-box position="1 1 1" width="1" height="1" depth="1" color="blue"></a-box>
 	</a-scene>
 	<button>Howdy</button>
