--- a/public/vr.html
+++ b/public/vr.html
@@ -13,8 +13,11 @@
 	</style>
 <body>
 	<a-scene class="aframebox" embedded>
-		<a-box position="-1 -1 -1" width="1" height="1" depth="1" color="blue"></a-box>
+		<a-box position="0 1 0" width="1" height="1" depth="1" color="blue"></a-box>
 	</a-scene>
+	<a-entity position="0 0 0">
+  	<a-camera></a-camera>
+	</a-entity>
 	<button>Howdy</button>
 	<script>
 		var socket = io()
