--- a/public/vr.html
+++ b/public/vr.html
@@ -13,15 +13,18 @@
 	</style>
 <body>
 	<a-scene class="aframebox" embedded>
-		<a-box position="0 5 0" width="1" height="1" depth="1" color="blue"></a-box>
+		<a-box position="0 2 0" width="1" height="1" depth="1" color="blue"></a-box>
 	</a-scene>
 	<a-entity position="0 -1 0">
   	<a-camera></a-camera>
 	</a-entity>
-	<button>Howdy</button>
+	<button type="button" onclick="test()">Howdy</button>
 	<script>
 		var socket = io()
 		socket.on('message', function(data) {console.log(data)})
+		function test() {
+			socket.broadcast.emit('message', ('description: Howdy'))
+		}
 	</script>
 </body>
 </html>
