--- a/public/vr.html
+++ b/public/vr.html
@@ -5,6 +5,11 @@
 </head>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript">
+		function test() {
+			socket.emit('personalTest', {message: 'Howdy'})
+		}
+	</script>
 	<style type="text/css">
 		.aframebox {
 			height: 500px;
@@ -22,9 +27,7 @@
 	<script>
 		var socket = io()
 		socket.on('message', function(data) {console.log(data)})
-		function test() {
-			socket.emit('message', {'message': 'Howdy'})
-		}
+		socket.on('personalTest', function(data){console.log(data)})
 	</script>
 </body>
 </html>
