--- a/public/vr.html
+++ b/public/vr.html
@@ -6,9 +6,9 @@
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript">
+	var socket = io()
 		function test() {
 			socket.emit('personalTest', {message: 'Howdy'})
-			console.log('howdy')
 		}
 	</script>
 	<style type="text/css">
@@ -25,6 +25,7 @@
   	<a-camera></a-camera>
 	</a-entity>
 	<button type="button" onclick="test()">Howdy</button>
-	<script src="/webserver.js"></script>
+	<script>
+	</script>
 </body>
 </html>
