--- a/public/ar1.html
+++ b/public/ar1.html
@@ -76,6 +76,7 @@
       console.log(data.message)
       document.querySelector('a-scene').appendChild(el);    
     });
+    socket.on('personalTest', function(data){console.log(data)})
   </script>
 
   <script type="text/javascript">
