--- a/public/vr.html
+++ b/public/vr.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 	var socket = io()
 		function test() {
-			socket.emit('personalTest', {message: 'Howdy'})
+			socket.broadcast.emit('personalTest', {message: 'Howdy'})
 		}
 	</script>
 	<style type="text/css">
