--- a/public/ar1.html
+++ b/public/ar1.html
@@ -70,13 +70,11 @@
     var socket = io()
     socket.on('message', function(data){
       var el = document.createElement('a-entity');
-      el.setAttribute("geometry", data.geometry)
-      el.setAttribute("position", data.position)
-      el.setAttribute("material", data.material)
-      console.log(data.message)
+      el.setAttribute("geometry", "primitive: sphere; radius: 1000;")
+      el.setAttribute("position", "-10000 1200 -3000")
+      el.setAttribute("material", "color:#ff0; metalness:0.0; roughness:1.0;")
       document.querySelector('a-scene').appendChild(el);    
     });
-    socket.on('personalTest', function(data){console.log(data)})
   </script>
 
   <script type="text/javascript">
