--- a/public/vr.html
+++ b/public/vr.html
@@ -5,12 +5,6 @@
 </head>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<script type="text/javascript">
-	var socket = io()
-		function test() {
-			socket.broadcast.emit('personalTest', {message: 'Howdy'})
-		}
-	</script>
 	<style type="text/css">
 		.aframebox {
 			height: 500px;
@@ -24,8 +18,10 @@
 	<a-entity position="0 -1 0">
   	<a-camera></a-camera>
 	</a-entity>
-	<button type="button" onclick="test()">Howdy</button>
+	<button>Howdy</button>
 	<script>
+		var socket = io()
+		socket.on('message', function(data) {console.log(data)})
 	</script>
 </body>
 </html>
