--- a/public/vr.html
+++ b/public/vr.html
@@ -5,7 +5,12 @@
 </head>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="webserver.js"></script>
+	<script>
+		var socket = io();
+			function test() {
+				socket.emit('personalTest','this is a test')
+			}
+	</script>
 	<style type="text/css">
 		.aframebox {
 			height: 500px;
