--- a/public/vr.html
+++ b/public/vr.html
@@ -5,7 +5,7 @@
 </head>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<script>
+	<script type="text/javascript">
 		var socket = io();
 			function test() {
 				socket.emit('personalTest','this is a test')
