--- a/public/ar1.html
+++ b/public/ar1.html
@@ -76,7 +76,7 @@
       document.querySelector('a-scene').appendChild(el);    
     });
 
-    socket.on('newtext', function(data) {console.log(data)}
+    socket.on('newtext', function(data) {console.log(data)})
   </script>
 
   <script type="text/javascript">
