--- a/public/aframeAR.html
+++ b/public/aframeAR.html
@@ -13,7 +13,7 @@
 	</a-scene>
 	<script>
 		var socket = io()
-		socket.on('message', function(data) {console.log(data)})
+		socket.on('newtext', function(data) {console.log(data)})
 	</script>
 </body>
 </html>
