--- a/public/ar1.html
+++ b/public/ar1.html
@@ -73,7 +73,8 @@
       el.setAttribute("geometry", "primitive: sphere; radius: 1000;")
       el.setAttribute("position", "-10000 1200 -3000")
       el.setAttribute("material", "color:#ff0; metalness:0.0; roughness:1.0;")
-      document.querySelector('a-scene').appendChild(el);    
+      document.querySelector('a-scene').appendChild(el);   
+      console.log('howdy') 
     });
 
     socket.on('newtext', function(data) {console.log(data)});
