--- a/public/vr.html
+++ b/public/vr.html
@@ -8,12 +8,8 @@
 	<script type="text/javascript">
 		var socket = io();
 			function test() {
-				socket.emit('geometry',"primitive: sphere; radius: 1000;",
-    	"position": "-10000 1200 -3000",
-    	"material": "color:#ff0; metalness:0.0; roughness:1.0;",
-    	"message":"new Object")
+				socket.emit('personalTest','this is a test')
 			}
-			
 	</script>
 	<style type="text/css">
 		.aframebox {
@@ -28,6 +24,6 @@
 	<a-entity position="0 -1 0">
   	<a-camera></a-camera>
 	</a-entity>
-	<button type="button" onclick="test()">Create a box</button>
+	<button type="button" onclick="test()">Howdy</button>
 </body>
 </html>
