--- a/public/ar1.html
+++ b/public/ar1.html
@@ -68,13 +68,12 @@
 
   <script type="text/javascript"> 
     var socket = io()
-    socket.on('geometry', function(data){
+    socket.on('message', function(data){
       var el = document.createElement('a-entity');
       el.setAttribute("geometry", "primitive: sphere; radius: 1000;")
       el.setAttribute("position", "-10000 1200 -3000")
       el.setAttribute("material", "color:#ff0; metalness:0.0; roughness:1.0;")
-      document.querySelector('a-scene').appendChild(el);   
-      console.log('howdy') 
+      document.querySelector('a-scene').appendChild(el);    
     });
 
     socket.on('newtext', function(data) {console.log(data)});
