--- a/public/vr.html
+++ b/public/vr.html
@@ -33,6 +33,6 @@
   	<a-camera></a-camera>
 	</a-entity>
 	<button type="button" onclick="test()">Howdy</button>
-	<button type="button" onclick="test()">Create a box</button>
+	<button type="button" onclick="createBox()">Create a box</button>
 </body>
 </html>
