--- a/public/vr.html
+++ b/public/vr.html
@@ -12,11 +12,11 @@
 			}
 
 			function createBox() {
-				socket.emit('newShape', {"geometry": "primitive: sphere; radius: 1000;",
-    	"position": "-10000 1200 -3000",
-    	"material": "color:#ff0; metalness:0.0; roughness:1.0;",
-    	"message":"new Object"
-    		})
+				let box =  {"geometry": "primitive: sphere; radius: 1000;",
+    	"position":"-10000 1200 -3000",
+    	"material":"color:#ff0; metalness:0.0; roughness:1.0;",
+    	"message":"new Object"}
+				socket.emit('newShape', box)
 			}
 	</script>
 	<style type="text/css">
