--- a/public/tracking.html
+++ b/public/tracking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>tracking.js - draw something</title>
-  <link rel="stylesheet" href="assets/demo.css">
+  <link rel="stylesheet" href="demo.css">
 
   <script src="tracking.js"></script>
   <script src="splines.min.js"></script>
