--- a/public/tracking.html
+++ b/public/tracking.html
@@ -40,7 +40,7 @@
 <body>
 
   <div class="demo-title">
-    <p><a href="http://trackingjs.com" target="_parent">tracking.js</a> － use magenta color to draw and cyan to erase</p>
+    <p><a href="http://trackingjs.com" target="_parent">tracking.js</a> － use magenta color to draw and green to erase</p>
   </div>
 
   <div class="demo-frame">
@@ -60,6 +60,13 @@
 
       var drawSegments = [[]];
       var segment = 0;
+
+      tracking.ColorTracker.registerColor('green', function (r, g, b) {
+        if( r < 58 && g > 100 && b < 50) {
+          return true;
+        }
+        return false 
+      })
 
       var tracker = new tracking.ColorTracker(['magenta', 'green']);
 
@@ -100,6 +107,7 @@
       (function loop() {
           for (var i = 0, len = drawSegments.length; i < len; i++) {
               drawSpline(context, drawSegments[i], 0.5, false);
+              console.log(drawSegments)
           }
 
           drawSegments = [drawSegments[drawSegments.length - 1]];
