--- a/public/tracking.html
+++ b/public/tracking.html
@@ -94,7 +94,7 @@
 
       function draw(rect) {
         drawSegments[segment].push(rect.x + rect.width / 2, rect.y + rect.height / 2);
-        database[segment].push(rect.x + rect.width / 2, rect.y + rect.height / 2)
+        database[segment].push('x' + rect.x + rect.width / 2,'y' + rect.y + rect.height / 2)
       }
 
       function erase(rect) {
