--- a/public/tracking.html
+++ b/public/tracking.html
@@ -63,7 +63,7 @@
 
       var counter = 1;
 
-      var database = [[]]
+      var database = {}
       tracking.ColorTracker.registerColor('green', function (r, g, b) {
         if( r < 58 && g > 100 && b < 50) {
           return true;
@@ -96,7 +96,7 @@
 
       function draw(rect) {
         drawSegments[segment].push(rect.x + rect.width / 2, rect.y + rect.height / 2);
-        database[segment].push(counter+'x' + rect.x + rect.width / 2, counter+'y' + rect.y + rect.height / 2)
+        database[counter]={'x' : rect.x + rect.width / 2, 'y' : rect.y + rect.height / 2}
         counter++;
       }
 
