--- a/public/ar1.html
+++ b/public/ar1.html
@@ -25,10 +25,14 @@
       box-shadow: inset 0 0 30px 15px #49628a;
       transition: 500ms ease-in-out;
     }
+    .aframebox {
+      height: 500px;
+      width: 500px;
+      }
   </style>   
 </head>
 <body>
-  <a-scene>
+  <a-scene class="aframebox" embedded>
 
     <a-camera position="0 1.8 500"> <a-cursor color="blue" /></a-camera>
 
