--- a/public/drawingVR.html
+++ b/public/drawingVR.html
@@ -4,19 +4,11 @@
 	<title>Welcome to My App</title>
 </head>
   <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-  <script src="aframecurve.js"></script>
+  <script src="https://rawgit.com/andreasplesch/aframe-meshline-component/master/dist/aframe-meshline-component.min.js"></script>
 <body>
   <a-scene>
-    <a-curve id="track1">
-        <a-curve-point position="-1 1 -3"></a-curve-point>
-        <a-curve-point position="1 1 -3"></a-curve-point>
-    </a-curve>
-    
-    <!-- Draw the Curve -->
-    <a-draw-curve curveref="#track1" material="shader: line; color: blue;"></a-draw-curve>
-    
-    <!-- Clone a Box along the Curve -->
-    <a-entity clone-along-curve="curve: #track1; spacing: 0.2; scale: 1 1 1; rotation: 0 0 0;" geometry="primitive:box; height:0.1; width:0.2; depth:0.1"></a-entity>
+    <a-entity meshline="lineWidth: 20; path: -2 -1 0, 0 -2 0, 2 -1; color: #E20049"></a-entity>
   </a-scene>
 </body>
 </html>
+
