--- a/public/vr.html
+++ b/public/vr.html
@@ -4,8 +4,8 @@
 	<title>Hello, World! A-Frame VR World!</title>
 </head>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
 	<script src="https://rawgit.com/andreasplesch/aframe-meshline-component/master/dist/aframe-meshline-component.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript">
 		var socket = io();
 			function test() {
@@ -20,7 +20,7 @@
 			}
 
 			function goToAr2() {
-				socket.emit("ar2", "This is ar2")c
+				socket.emit("ar2", "This is ar2")
 			}
 	</script>
 	<style type="text/css">
