--- a/public/drawingAR.html
+++ b/public/drawingAR.html
@@ -8,7 +8,13 @@
   <script src="tracking.js"></script>
   <script src="splines.min.js"></script>
   <script src="stats.min.js"></script>
-
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript">
+    var socket = io ();
+      function sendDrawing() {
+        socket.emit('sendingDrawing', database)
+      }
+  </script>
   <style>
     #canvas,
     #video {
@@ -51,6 +57,8 @@
       </div>
     </div>
   </div>
+
+  <button type="button" onclick="sendDrawing()">Send Drawing</button>
 
   <script>
     window.onload = function() {
