--- a/public/vr.html
+++ b/public/vr.html
@@ -23,7 +23,7 @@
 				socket.emit("ar2", "This is ar2")
 			}
 
-			socket.on('sendingDrawing', function(data){
+			socket.on('toVRDrawing', function(data){
 				console.log(data)
 			})
 
