--- a/public/drawingAR.html
+++ b/public/drawingAR.html
@@ -12,6 +12,7 @@
   <script type="text/javascript">
     var socket = io ();
       function sendDrawing() {
+        console.log('this is your data', database)
         socket.emit('sendingDrawing', database)
       }
   </script>
@@ -124,7 +125,6 @@
 
           drawSegments = [drawSegments[drawSegments.length - 1]];
           segment = 0;
-          console.log(database)
           requestAnimationFrame(loop);
       }());
     };
