--- a/public/drawingAR.html
+++ b/public/drawingAR.html
@@ -55,7 +55,7 @@
 
 
   <script>
-    var database = {}
+    var database = []
     window.onload = function() {
       var video = document.getElementById('video');
       var canvas = document.getElementById('canvas');
@@ -63,8 +63,6 @@
 
       var drawSegments = [[]];
       var segment = 0;
-
-      var counter = 1;
 
       tracking.ColorTracker.registerColor('green', function (r, g, b) {
         if( r < 58 && g > 100 && b < 50) {
@@ -98,8 +96,7 @@
 
       function draw(rect) {
         drawSegments[segment].push(rect.x + rect.width / 2, rect.y + rect.height / 2);
-        database[counter]={'x' : rect.x + rect.width / 2, 'y' : rect.y + rect.height / 2}
-        counter++;
+        database.push({'x' : rect.x + rect.width / 2, 'y' : rect.y + rect.height / 2})
       }
 
       function erase(rect) {
