--- a/public/drawingAR.html
+++ b/public/drawingAR.html
@@ -61,6 +61,7 @@
       var canvas = document.getElementById('canvas');
       var context = canvas.getContext('2d');
 
+      var counter = 0;
       var drawSegments = [[]];
       var segment = 0;
 
@@ -96,9 +97,10 @@
 
       function draw(rect) {
         drawSegments[segment].push(rect.x + rect.width / 2, rect.y + rect.height / 2);
-        if(segment % 2 === 0) {
+        if(counter % 2 === 0) {
           database.push({'x' : rect.x + rect.width / 2, 'y' : rect.y + rect.height / 2})
         }
+        counter ++;
       }
 
       function erase(rect) {
