--- a/public/vr.html
+++ b/public/vr.html
@@ -26,16 +26,16 @@
 			function propteryForLine(arr) {
 				let results = 'lineWidth: 20; path: '  
 			  arr.forEach(function(element){
-			    results = results + element.x/10 +' ' + element.y/10 + ' ' + '0, '
+			    results = results + element.x/100 +' ' + element.y/100 + ' ' + '0, '
 			  })
-			  return results + ';'
+			  return results + '; color: #E20049'
 			}
 
 			socket.on('toVRDrawing', function(data){
 				let entity = document.createElement('a-entity')
 				let results = propteryForLine(data)
+				console.log(results)
 				entity.setAttribute("meshline", results)
-				entity.setAttribute("color", "black")
 				document.querySelector('a-scene').appendChild(entity)
 			})
 
