--- a/public/vr.html
+++ b/public/vr.html
@@ -36,7 +36,7 @@
 				let entity = document.createElement('a-entity')
 				let results = propteryForLine(data)
 				console.log(results)
-				entity.setAttribute("primitive", tube)
+				entity.setAttribute("primitive", 'tube')
 				entity.setAttribute("path", results)
 				entity.setAttribute("radius", "0.5")
 				entity.setAttribute("material", "color: red")
