--- a/public/vr.html
+++ b/public/vr.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Hello, World! A-Frame VR World!</title>
 </head>
-	<script src="a-tube.js"></script>
+	<script src="aframe-extras.primitives.js"></script>
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 	<script src="https://rawgit.com/andreasplesch/aframe-meshline-component/master/dist/aframe-meshline-component.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
